kubernetes/apps/default/speedtest-tracker/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-tracker
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "speed.ragas.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: speedtest-tracker
          port: 80
